--- a/index.html
+++ b/index.html
@@ -1,12 +1,111 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Serhii Voropaiev</title>
 </head>
-<body>
-    <p>Hey hey hey</p>
-    <p>Ive changed my name</p>
-    <img src="./img/wolf.png" alt="wolf">
+<body style="margin: 30px">
+
+<!--теги обертки-->
+<!--section- тег для обозначения секции (раздела)-->
+<!--header - шапка-->
+<!--nav - навигация-->
+<!--article - статья-->
+<!--footer - подвал-->
+
+<!--стилистические теги-->
+<!--strong or b - жирный-->
+<!--mark - выделить желтым-->
+
+
+<!--Header navigation (Logo+pages+social media icons)-->
+<header>
+    <nav>
+        <div style="display: flex; align-items: center; width: 100%">
+
+            <!--logo area-->
+
+            <div style="display: inline-block">
+                <a href="#"><img src="./img/avatarLogo.svg" alt="logoAvatar"></a>
+            </div>
+
+            <!--menu links-->
+
+            <div style="display: flex; width: 100%; justify-content: center">
+                <div style="display: inline-block; width: 100px">
+                    <a href="pages/aboutMe.html" style="font-family: sans-serif; color: black; text-decoration: none">About
+                        me</a>
+                </div>
+                <div style="display: inline-block; width: 100px">
+                    <a href="pages/portfolio.html" style="font-family: sans-serif; color: black; text-decoration: none">Portfolio</a>
+                </div>
+                <div style="display: inline-block;  width: 100px">
+                    <a href="pages/contacts.html" style="font-family: sans-serif; color: black; text-decoration: none">Contacts</a>
+                </div>
+            </div>
+
+            <!--social media icons-->
+
+            <div style="display: inline-block">
+                <a href="https://www.instagram.com/" target="_blank"><img src="./img/instagram.svg" alt="instaIcon"></a>
+            </div>
+            <div style="display: inline-block">
+                <a href="https://twitter.com/" target="_blank"><img src="./img/twitter.svg" alt="twitterIcon"></a>
+            </div>
+            <div style="display: inline-block">
+                <a href="https://dribbble.com/" target="_blank"><img src="./img/dribble.svg" alt="dribbleIcon"></a>
+            </div>
+
+        </div>
+    </nav>
+</header>
+
+<section
+        style="background: #F9F9FC; padding: 0 40px; margin-top:50px; display: flex; align-items: center; justify-content: center;">
+
+    <!--textContent-->
+    <div style="width: 50%; display: inline-block;">
+        <h1 style="font-family: sans-serif; font-size:56px">
+            <mark>Hello world</mark>
+        </h1>
+        <h4 style="font-family: sans-serif; font-size:32px">There is my try to tell you more about myself</h4>
+        <p style="font-family: sans-serif; color: grey">Hello, Im a <b style="color: black">Senior UX Engineer</b> from
+            Kiev (Ukraine) with more than <strong style="color: black">7 years of experience</strong>.
+            I work in Stellanti’s Danish office. I create user scenarios, wireframes, high & low poly prototypes,
+            user interfaces and description for it. At this time, I learn new, for me,
+            <mark>frontend technologies</mark>
+            .
+        </p>
+    </div>
+
+    <!--bg image-->
+    <div style="display: inline-block">
+        <img src="./img/wolf.png" alt="wolf">
+    </div>
+</section>
+
+<div>
+    <footer>
+        <!--menu links-->
+
+        <nav style="display: flex; width: 100%; justify-content: center; padding: 40px 0">
+            <div style="display: inline-block; width: 100px">
+                <a href="https://www.linkedin.com/in/sergey-voropaiev-8563a612b/" target="_blank"
+                   style="font-family: sans-serif; color: grey; text-decoration: none">LinkedIn</a>
+            </div>
+            <div style="display: inline-block; width: 100px">
+                <a href="https://djinni.co/" target="_blank"
+                   style="font-family: sans-serif; color: grey; text-decoration: none">Djinni</a>
+
+            </div>
+
+        </nav>
+    </footer>
+</div>
+
+
 </body>
 </html>
