--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <!--textContent-->
     <div style="width: 50%; display: inline-block;">
         <h1 style="font-family: sans-serif; font-size:56px">
-            <mark>Hello world</mark>
+            <mark>Hello world</mark>!
         </h1>
         <h4 style="font-family: sans-serif; font-size:32px">There is my try to tell you more about myself</h4>
         <p style="font-family: sans-serif; color: grey">Hello, Im a <b style="color: black">Senior UX Engineer</b> from
