fix last change and try it again

--- a/pages/aboutMe.html
+++ b/pages/aboutMe.html
@@ -29,7 +29,7 @@
             <!--logo area-->
 
             <div style="display: inline-block">
-                <a href="../index.html"><img src="/img/avatarLogo.svg" alt="logoAvatar"></a>
+                <a href="../index.html"><img src="../img/avatarLogo.svg" alt="logoAvatar"></a>
             </div>
 
             <!--menu links-->
