--- a/pages/aboutMe.html
+++ b/pages/aboutMe.html
@@ -67,13 +67,13 @@
 <section>
     <h2 style="font-family: sans-serif; margin-top: 50px">Look at that</h2>
     <p style="font-family: sans-serif;">How cool is that</p>
-    <video src="/video/Mountains%20-%2081945.mp4" controls style="width: 100%; margin-top: 50px"></video>
+    <video src="../video/Mountains%20-%2081945.mp4" controls style="width: 100%; margin-top: 50px"></video>
 </section>
 
 <section>
     <h2 style="font-family: sans-serif; margin-top: 50px">One of the best song eveer</h2>
     <p style="font-family: sans-serif;">Just try it and I hope you will like it too</p>
-    <audio src="/audio/WishYouWereHere.mp3" controls style="width: 100%; margin-top: 50px"></audio>
+    <audio src="../audio/WishYouWereHere.mp3" controls style="width: 100%; margin-top: 50px"></audio>
 </section>
 
 <!--audio section-->
